tests/neg-macros/reflect-inline/test_2.scala
import api.*

class Test {
  val a: String = "5"
  a.stripMargin2 // error: `a should be a known constant
}
